--- a/PersonalPortal/PersonalPortal/Style/Css/NewIndex.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/NewIndex.css
@@ -23,7 +23,7 @@ iframe {
 }
 
 .shadow {
-    box-shadow: 0 2px 10px 1px #999;
+    text-shadow: 0.1px 0.5px 0.5px rgba(0, 0, 0, 0.2);
 }
 
 .ng-cloak {
